# picture_diary

./: .gitignore  README.md  day5_02_emotions.py  diary.md  main.py  requirements.txt
05_pandas_basic/: 02.ipynb  고객정보분석01.ipynb  고객정보분석02.ipynb
06_pytorch_basic/: .gitignore  01.ipynb  02.ipynb  03.ipynb  main.py  pyproject.toml  의류직물이미지분석.ipynb
07_AI_basic/: 03-1.py  03-2.py  03-3.py  03-4.py  03-5.py  03-6.py  04-1.py  image_fal.py  image_first.py  image_prompt.py  image_v2.py  main.py  prompt_json.py  pyproject.toml  scene.py  test.env.py  test_openai_api_key.py
07_AI_basic/agents/: module.py
08_prompt_basic/: 01-1.py  main.py  pyproject.toml
agents/: scene.py  video.py
domains/: emoji_prompts.json  product_prompts.json
mini_projects/picture_diary/: .gitignore  README.md  day5_01_product_catalog.py  pipeline.py  pyproject.toml  week7_retrospective.md  그림일기_프로젝트_로드맵.md
mini_projects/picture_diary/agents/: diary.md  image.py
mini_projects/picture_diary/extracted/그림일기 프로젝트/: wf3_day5_제출가이드.md
mini_projects/picture_diary/개인/: 그림일기_프로젝트_로드맵.md
