[project]
name = "ai-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.37.1",
    "fal-client>=1.0.0",
    "openai>=2.37.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "replicate>=1.0.7",
    "requests>=2.34.2",
    "transformers>=5.9.0",
]
